[dependencies]
derive_more = '0.14.0'
exit-future = '0.1'
futures = '0.1'
log = '0.4'
parking_lot = '0.9.0'
tokio = '0.1'
trie-root = '0.15.2'

[dependencies.babe]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-consensus-babe'
rev = '409f5aa10a32a7b18f1c5a5eded97d24181865dc'

[dependencies.babe-primitives]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-consensus-babe-primitives'
rev = '409f5aa10a32a7b18f1c5a5eded97d24181865dc'

[dependencies.basic-authorship]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-basic-authorship'
rev = '409f5aa10a32a7b18f1c5a5eded97d24181865dc'

[dependencies.codec]
package = 'parity-scale-codec'
version = '1.0.0'

[dependencies.ctrlc]
features = ['termination']
version = '3.0'

[dependencies.grandpa]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-finality-grandpa'
rev = '409f5aa10a32a7b18f1c5a5eded97d24181865dc'

[dependencies.grandpa-primitives]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-finality-grandpa-primitives'
rev = '409f5aa10a32a7b18f1c5a5eded97d24181865dc'

[dependencies.inherents]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-inherents'
rev = '409f5aa10a32a7b18f1c5a5eded97d24181865dc'

[dependencies.network]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-network'
rev = '409f5aa10a32a7b18f1c5a5eded97d24181865dc'

[dependencies.ibc-node-runtime]
path = 'runtime'

[dependencies.primitives]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-primitives'
rev = '409f5aa10a32a7b18f1c5a5eded97d24181865dc'

[dependencies.sr-io]
git = 'https://github.com/paritytech/substrate.git'
rev = '409f5aa10a32a7b18f1c5a5eded97d24181865dc'

[dependencies.substrate-cli]
git = 'https://github.com/paritytech/substrate.git'
rev = '409f5aa10a32a7b18f1c5a5eded97d24181865dc'

[dependencies.substrate-client]
git = 'https://github.com/paritytech/substrate.git'
rev = '409f5aa10a32a7b18f1c5a5eded97d24181865dc'

[dependencies.substrate-executor]
git = 'https://github.com/paritytech/substrate.git'
rev = '409f5aa10a32a7b18f1c5a5eded97d24181865dc'

[dependencies.substrate-service]
git = 'https://github.com/paritytech/substrate.git'
rev = '409f5aa10a32a7b18f1c5a5eded97d24181865dc'

[dependencies.transaction-pool]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-transaction-pool'
rev = '409f5aa10a32a7b18f1c5a5eded97d24181865dc'

[build-dependencies]
vergen = '3'
[profile.release]
panic = 'unwind'

[workspace]
members = ['runtime', 'relayer']

[package]
authors = ['ys']
build = 'build.rs'
edition = '2018'
name = 'ibc-node'
version = '2.0.0'

[[bin]]
name = 'ibc-node'
path = 'src/main.rs'
