[package]
authors = ['ys']
build = 'build.rs'
edition = '2018'
name = 'ibc-node'
version = '2.0.0'

[workspace]
members = ['runtime', 'proof', 'relayer']

[[bin]]
name = 'ibc-node'
path = 'src/main.rs'

[build-dependencies]
vergen = '3'

[dependencies]
derive_more = '0.14.0'
exit-future = '0.1'
futures = '0.1'
log = '0.4'
parking_lot = '0.9.0'
tokio = '0.1'
trie-root = '0.15.2'

[dependencies.babe]
git = 'https://github.com/en/substrate.git'
package = 'substrate-consensus-babe'
branch = 'ibc-demo'

[dependencies.babe-primitives]
git = 'https://github.com/en/substrate.git'
package = 'substrate-consensus-babe-primitives'
branch = 'ibc-demo'

[dependencies.basic-authorship]
git = 'https://github.com/en/substrate.git'
package = 'substrate-basic-authorship'
branch = 'ibc-demo'

[dependencies.codec]
package = 'parity-scale-codec'
version = '1.0.0'

[dependencies.ctrlc]
features = ['termination']
version = '3.0'

[dependencies.grandpa]
git = 'https://github.com/en/substrate.git'
package = 'substrate-finality-grandpa'
branch = 'ibc-demo'

[dependencies.grandpa-primitives]
git = 'https://github.com/en/substrate.git'
package = 'substrate-finality-grandpa-primitives'
branch = 'ibc-demo'

[dependencies.inherents]
git = 'https://github.com/en/substrate.git'
package = 'substrate-inherents'
branch = 'ibc-demo'

[dependencies.network]
git = 'https://github.com/en/substrate.git'
package = 'substrate-network'
branch = 'ibc-demo'

[dependencies.ibc-node-runtime]
path = 'runtime'

[dependencies.primitives]
git = 'https://github.com/en/substrate.git'
package = 'substrate-primitives'
branch = 'ibc-demo'

[dependencies.sr-io]
git = 'https://github.com/en/substrate.git'
branch = 'ibc-demo'

[dependencies.substrate-cli]
git = 'https://github.com/en/substrate.git'
branch = 'ibc-demo'

[dependencies.substrate-client]
git = 'https://github.com/en/substrate.git'
branch = 'ibc-demo'

[dependencies.substrate-executor]
git = 'https://github.com/en/substrate.git'
branch = 'ibc-demo'

[dependencies.substrate-service]
git = 'https://github.com/en/substrate.git'
branch = 'ibc-demo'

[dependencies.transaction-pool]
git = 'https://github.com/en/substrate.git'
package = 'substrate-transaction-pool'
branch = 'ibc-demo'
[profile.release]
panic = 'unwind'
