[build-dependencies]
vergen = '3'

[dependencies]
derive_more = '0.14.0'
exit-future = '0.1'
futures = '0.1'
log = '0.4'
parking_lot = '0.9.0'
tokio = '0.1'
trie-root = '0.15.0'

[dependencies.aura-primitives]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-consensus-aura-primitives'
rev = '49db9e370e1a7aa490e1fb8749545d9781432a0d'

[dependencies.basic-authorship]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-basic-authorship'
rev = '49db9e370e1a7aa490e1fb8749545d9781432a0d'

[dependencies.codec]
package = 'parity-scale-codec'
version = '1.0.0'

[dependencies.consensus]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-consensus-aura'
rev = '49db9e370e1a7aa490e1fb8749545d9781432a0d'

[dependencies.ctrlc]
features = ['termination']
version = '3.0'

[dependencies.grandpa-primitives]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-finality-grandpa-primitives'
rev = '49db9e370e1a7aa490e1fb8749545d9781432a0d'

[dependencies.inherents]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-inherents'
rev = '49db9e370e1a7aa490e1fb8749545d9781432a0d'

[dependencies.network]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-network'
rev = '49db9e370e1a7aa490e1fb8749545d9781432a0d'

[dependencies.ibc-node-runtime]
path = 'runtime'

[dependencies.primitives]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-primitives'
rev = '49db9e370e1a7aa490e1fb8749545d9781432a0d'

[dependencies.sr-io]
git = 'https://github.com/paritytech/substrate.git'
rev = '49db9e370e1a7aa490e1fb8749545d9781432a0d'

[dependencies.substrate-cli]
git = 'https://github.com/paritytech/substrate.git'
rev = '49db9e370e1a7aa490e1fb8749545d9781432a0d'

[dependencies.substrate-client]
git = 'https://github.com/paritytech/substrate.git'
rev = '49db9e370e1a7aa490e1fb8749545d9781432a0d'

[dependencies.substrate-executor]
git = 'https://github.com/paritytech/substrate.git'
rev = '49db9e370e1a7aa490e1fb8749545d9781432a0d'

[dependencies.substrate-service]
git = 'https://github.com/paritytech/substrate.git'
rev = '49db9e370e1a7aa490e1fb8749545d9781432a0d'

[dependencies.transaction-pool]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-transaction-pool'
rev = '49db9e370e1a7aa490e1fb8749545d9781432a0d'

[[bin]]
name = 'ibc-node'
path = 'src/main.rs'

[package]
authors = ['ys']
build = 'build.rs'
edition = '2018'
name = 'ibc-node'
version = '2.0.0'
