[package]
authors = ['ys']
build = 'build.rs'
edition = '2018'
name = 'ibc-node'
version = '2.0.0'

[build-dependencies]
vergen = '3'

[[bin]]
name = 'ibc-node'
path = 'src/main.rs'

[dependencies]
derive_more = '0.14.0'
exit-future = '0.1'
futures = '0.1'
log = '0.4'
parking_lot = '0.9.0'
tokio = '0.1'
trie-root = '0.15.2'

[dependencies.babe]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-consensus-babe'
rev = '50e22e177950076b4704d320635e44a87f7b9df7'

[dependencies.babe-primitives]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-consensus-babe-primitives'
rev = '50e22e177950076b4704d320635e44a87f7b9df7'

[dependencies.basic-authorship]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-basic-authorship'
rev = '50e22e177950076b4704d320635e44a87f7b9df7'

[dependencies.codec]
package = 'parity-scale-codec'
version = '1.0.0'

[dependencies.ctrlc]
features = ['termination']
version = '3.0'

[dependencies.grandpa]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-finality-grandpa'
rev = '50e22e177950076b4704d320635e44a87f7b9df7'

[dependencies.grandpa-primitives]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-finality-grandpa-primitives'
rev = '50e22e177950076b4704d320635e44a87f7b9df7'

[dependencies.inherents]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-inherents'
rev = '50e22e177950076b4704d320635e44a87f7b9df7'

[dependencies.network]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-network'
rev = '50e22e177950076b4704d320635e44a87f7b9df7'

[dependencies.ibc-node-runtime]
path = 'runtime'

[dependencies.primitives]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-primitives'
rev = '50e22e177950076b4704d320635e44a87f7b9df7'

[dependencies.sr-io]
git = 'https://github.com/paritytech/substrate.git'
rev = '50e22e177950076b4704d320635e44a87f7b9df7'

[dependencies.substrate-cli]
git = 'https://github.com/paritytech/substrate.git'
rev = '50e22e177950076b4704d320635e44a87f7b9df7'

[dependencies.substrate-client]
git = 'https://github.com/paritytech/substrate.git'
rev = '50e22e177950076b4704d320635e44a87f7b9df7'

[dependencies.substrate-executor]
git = 'https://github.com/paritytech/substrate.git'
rev = '50e22e177950076b4704d320635e44a87f7b9df7'

[dependencies.substrate-service]
git = 'https://github.com/paritytech/substrate.git'
rev = '50e22e177950076b4704d320635e44a87f7b9df7'

[dependencies.transaction-pool]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-transaction-pool'
rev = '50e22e177950076b4704d320635e44a87f7b9df7'
