[package]
name = "node-template"
version = "2.0.0"
authors = ["Anonymous"]
build = "build.rs"
edition = "2018"

[[bin]]
name = "node-template"
path = "src/main.rs"

[profile.release]
panic = 'unwind'

[workspace]
members = ['calls', 'cli', 'relayer', 'runtime']

[dependencies]
futures = "0.3.1"
futures01 = { package = "futures", version = "0.1.29" }
ctrlc = { version = "3.1.3", features = ["termination"] }
log = "0.4.8"
tokio = "0.1.22"
parking_lot = "0.9.0"
codec = { package = "parity-scale-codec", version = "1.0.0" }
trie-root = "0.15.2"
sp-io = { path = "../substrate/primitives/io" }
sc-cli = { path = "../substrate/client/cli" }
sp-core = { path = "../substrate/primitives/core" }
sc-executor = { path = "../substrate/client/executor" }
sc-service = { path = "../substrate/client/service" }
sp-inherents = { path = "../substrate/primitives/inherents" }
sc-transaction-pool = { path = "../substrate/client/transaction-pool" }
sp-transaction-pool = { path = "../substrate/primitives/transaction-pool" }
sc-network = { path = "../substrate/client/network" }
sc-consensus-aura = { path = "../substrate/client/consensus/aura" }
sp-consensus-aura = { path = "../substrate/primitives/consensus/aura" }
sp-consensus = { path = "../substrate/primitives/consensus/common" }
grandpa = { package = "sc-finality-grandpa", path = "../substrate/client/finality-grandpa" }
grandpa-primitives = { package = "sp-finality-grandpa", path = "../substrate/primitives/finality-grandpa" }
sc-client = {  path = "../substrate/client/" }
node-template-runtime = { path = "runtime" }
sp-runtime = { path = "../substrate/primitives/runtime" }
sc-basic-authority = { path  = "../substrate/client/basic-authorship"}

[build-dependencies]
vergen = "3.0.4"
build-script-utils = { package = "substrate-build-script-utils", path = "../substrate/utils/build-script-utils" }
