[package]
authors = ['ys']
build = 'build.rs'
edition = '2018'
name = 'node'
version = '2.0.0'

[dependencies]
derive_more = '0.15.0'
exit-future = '0.1.4'
futures = '0.1.29'
log = '0.4.8'
parking_lot = '0.9.0'
tokio = '0.1.22'
trie-root = '0.15.2'

[dependencies.aura]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-consensus-aura'
rev = '1893fc10de4bc6c1cf4455c637e9dd800f9f6831'

[dependencies.aura-primitives]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-consensus-aura-primitives'
rev = '1893fc10de4bc6c1cf4455c637e9dd800f9f6831'

[dependencies.basic-authorship]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-basic-authorship'
rev = '1893fc10de4bc6c1cf4455c637e9dd800f9f6831'

[dependencies.codec]
package = 'parity-scale-codec'
version = '1.0.0'

[dependencies.ctrlc]
features = ['termination']
version = '3.1.3'

[dependencies.grandpa]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-finality-grandpa'
rev = '1893fc10de4bc6c1cf4455c637e9dd800f9f6831'

[dependencies.grandpa-primitives]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-finality-grandpa-primitives'
rev = '1893fc10de4bc6c1cf4455c637e9dd800f9f6831'

[dependencies.inherents]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-inherents'
rev = '1893fc10de4bc6c1cf4455c637e9dd800f9f6831'

[dependencies.network]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-network'
rev = '1893fc10de4bc6c1cf4455c637e9dd800f9f6831'

[dependencies.primitives]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-primitives'
rev = '1893fc10de4bc6c1cf4455c637e9dd800f9f6831'

[dependencies.runtime]
package = 'node-runtime'
path = 'runtime'

[dependencies.sr-io]
git = 'https://github.com/paritytech/substrate.git'
rev = '1893fc10de4bc6c1cf4455c637e9dd800f9f6831'

[dependencies.sr-primitives]
git = 'https://github.com/paritytech/substrate.git'
rev = '1893fc10de4bc6c1cf4455c637e9dd800f9f6831'

[dependencies.substrate-cli]
git = 'https://github.com/paritytech/substrate.git'
rev = '1893fc10de4bc6c1cf4455c637e9dd800f9f6831'

[dependencies.substrate-client]
git = 'https://github.com/paritytech/substrate.git'
rev = '1893fc10de4bc6c1cf4455c637e9dd800f9f6831'

[dependencies.substrate-executor]
git = 'https://github.com/paritytech/substrate.git'
rev = '1893fc10de4bc6c1cf4455c637e9dd800f9f6831'

[dependencies.substrate-service]
git = 'https://github.com/paritytech/substrate.git'
rev = '1893fc10de4bc6c1cf4455c637e9dd800f9f6831'

[dependencies.transaction-pool]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-transaction-pool'
rev = '1893fc10de4bc6c1cf4455c637e9dd800f9f6831'

[build-dependencies]
vergen = '3.0.4'

[build-dependencies.build-script-utils]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-build-script-utils'
rev = '1893fc10de4bc6c1cf4455c637e9dd800f9f6831'

[[bin]]
name = 'node'
path = 'src/main.rs'
[profile.release]
panic = 'unwind'

[workspace]
members = ['runtime']
