[package]
name = "proof"
version = "0.1.0"
authors = ["Yuanchao Sun <yuanchao.sun@gmail.com>"]
edition = "2018"
build = "build.rs"


[dependencies]

[build-dependencies]
wasm-builder-runner = { package = "substrate-wasm-builder-runner", version = "1.0.3" }

[features]
default = []

# These two features are used for `no_std` builds for the environments which already provides
# `#[panic_handler]` and `#[alloc_error_handler]`.
#
# For the regular wasm runtime builds those are not used.
no_panic_handler = []
no_oom = []