[package]
name = "relayer"
version = "0.1.0"
authors = ["Yuanchao Sun <yuanchao.sun@gmail.com>"]
edition = "2018"

[[bin]]
name = 'relayer'

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.6"
clap = { version = "~2.33", features = ["yaml"] }
substrate-subxt = { git="https://github.com/en/substrate-subxt.git", branch="ibc-demo" }
hex = "0.3"
tokio = { version = "0.1.11" }
futures = "0.1.19"
futures03 = { package = "futures-preview", version = "=0.3.0-alpha.19", features = ["compat"] }
url = "1.7"
hash-db = "0.15.2"
derive_more = "0.15"


[dependencies.state-machine]
git = 'https://github.com/en/substrate.git'
package = 'substrate-state-machine'
branch = 'ibc-demo'

[dependencies.codec]
package = 'parity-scale-codec'
version = '1.0.0'

[dependencies.ibc-node-runtime]
path = '../runtime'

[dependencies.keyring]
git = 'https://github.com/en/substrate.git'
package = 'substrate-keyring'
branch = 'ibc-demo'

[dependencies.primitives]
git = 'https://github.com/en/substrate.git'
package = 'substrate-primitives'
branch = 'ibc-demo'

[dependencies.sr_primitives]
git = 'https://github.com/en/substrate.git'
package = 'sr-primitives'
branch = 'ibc-demo'

[dependencies.node-primitives]
git = 'https://github.com/en/substrate.git'
package = 'node-primitives'
branch = 'ibc-demo'

[dependencies.srml-system]
git = 'https://github.com/en/substrate.git'
package = 'srml-system'
branch = 'ibc-demo'

[dependencies.srml-balances]
git = 'https://github.com/en/substrate.git'
package = 'srml-balances'
branch = 'ibc-demo'

[dependencies.srml-indices]
git = 'https://github.com/en/substrate.git'
package = 'srml-indices'
branch = 'ibc-demo'

[dependencies.client]
git = 'https://github.com/en/substrate.git'
package = 'substrate-client'
branch = 'ibc-demo'

[dependencies.executor]
git = 'https://github.com/en/substrate.git'
package = 'substrate-executor'
branch = 'ibc-demo'

[dependencies.client-db]
git = 'https://github.com/en/substrate.git'
package = 'substrate-client-db'
branch = 'ibc-demo'
features = ["kvdb-rocksdb", "test-helpers"]

[dependencies.test-client]
git = 'https://github.com/en/substrate.git'
package = 'substrate-test-client'
branch = 'ibc-demo'
