[package]
name = "relayer"
version = "0.1.0"
authors = ["Yuanchao Sun <ys@cdot.network>"]
edition = "2018"

[workspace]
members = [
	"frame",
]

[dependencies]
clap = "2.33.0"
tokio = "0.1"
url = "1.7"
futures = "0.1.28"
substrate-subxt = { path = "../substrate-subxt" }
frame = { path = "./frame" }
sp-keyring = { path = "../substrate/primitives/keyring", package = "sp-keyring" }
codec = { package = "parity-scale-codec", version = "1.0.0", default-features = false, features = ["derive"] }
frame-system = { path = "../substrate/frame/system" }
node-runtime = { path = "../node-template/runtime", package = "node-template-runtime" }
