[dependencies.babe]
default-features = false
git = 'https://github.com/en/substrate.git'
package = 'srml-babe'
branch = 'ibc-demo'

[dependencies.babe-primitives]
default-features = false
git = 'https://github.com/en/substrate.git'
package = 'substrate-consensus-babe-primitives'
branch = 'ibc-demo'

[dependencies.balances]
default_features = false
git = 'https://github.com/en/substrate.git'
package = 'srml-balances'
branch = 'ibc-demo'

[dependencies.client]
default_features = false
git = 'https://github.com/en/substrate.git'
package = 'substrate-client'
branch = 'ibc-demo'

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '1.0.0'

[dependencies.executive]
default_features = false
git = 'https://github.com/en/substrate.git'
package = 'srml-executive'
branch = 'ibc-demo'

[dependencies.grandpa]
default-features = false
git = 'https://github.com/en/substrate.git'
package = 'srml-grandpa'
branch = 'ibc-demo'

[dependencies.indices]
default_features = false
git = 'https://github.com/en/substrate.git'
package = 'srml-indices'
branch = 'ibc-demo'

[dependencies.offchain-primitives]
default-features = false
git = 'https://github.com/en/substrate.git'
package = 'substrate-offchain-primitives'
branch = 'ibc-demo'

[dependencies.primitives]
default_features = false
git = 'https://github.com/en/substrate.git'
package = 'substrate-primitives'
branch = 'ibc-demo'

[dependencies.randomness-collective-flip]
default_features = false
git = 'https://github.com/en/substrate.git'
package = 'srml-randomness-collective-flip'
branch = 'ibc-demo'

[dependencies.rstd]
default_features = false
git = 'https://github.com/en/substrate.git'
package = 'sr-std'
branch = 'ibc-demo'

[dependencies.runtime-io]
default_features = false
git = 'https://github.com/en/substrate.git'
package = 'sr-io'
branch = 'ibc-demo'

[dependencies.safe-mix]
default-features = false
version = '1.0.0'

[dependencies.serde]
features = ['derive']
optional = true
version = '1.0.101'

[dependencies.sr-primitives]
default_features = false
git = 'https://github.com/en/substrate.git'
branch = 'ibc-demo'

[dependencies.substrate-session]
default-features = false
git = 'https://github.com/en/substrate.git'
branch = 'ibc-demo'

[dependencies.sudo]
default_features = false
git = 'https://github.com/en/substrate.git'
package = 'srml-sudo'
branch = 'ibc-demo'

[dependencies.support]
default_features = false
git = 'https://github.com/en/substrate.git'
package = 'srml-support'
branch = 'ibc-demo'

[dependencies.system]
default_features = false
git = 'https://github.com/en/substrate.git'
package = 'srml-system'
branch = 'ibc-demo'

[dependencies.timestamp]
default_features = false
git = 'https://github.com/en/substrate.git'
package = 'srml-timestamp'
branch = 'ibc-demo'

[dependencies.version]
default_features = false
git = 'https://github.com/en/substrate.git'
package = 'sr-version'
branch = 'ibc-demo'
[build-dependencies.wasm-builder-runner]
package = 'substrate-wasm-builder-runner'
version = '1.0.2'

[package]
authors = ['ys']
edition = '2018'
name = 'ibc-node-runtime'
version = '2.0.0'

[features]
default = ['std']
std = [
    'codec/std',
    'client/std',
    'rstd/std',
    'runtime-io/std',
    'support/std',
    'balances/std',
    'babe/std',
    'babe-primitives/std',
    'executive/std',
    'indices/std',
    'grandpa/std',
    'primitives/std',
    'sr-primitives/std',
    'randomness-collective-flip/std',
    'system/std',
    'timestamp/std',
    'sudo/std',
    'version/std',
    'serde',
    'safe-mix/std',
    'offchain-primitives/std',
    'substrate-session/std',
]
